--- a/index.html
+++ b/index.html
@@ -4,10 +4,150 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@300;400&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="static/css/estilos.css">
-  <title>EasyBank</title>
+  <title>EasyBankÑemiÑemi</title>
 </head>
 <body>
-  
+    <header class="header">
+      <img src="static/images/logo.svg" alt="logo">
+      <span class="menu"></span>
+    </header>
+    <section class="hero">
+      <div class="wrapper">
+        <div class="hero__img"></div>
+        <h2 class="title title__h1 ">Next generation digital banking</h2>
+        <p class="copy">Take your finalcial life online. Your Easybank account will be a one-stop-shop for spending. saving, budgeting, investing, and much more.</p>
+        <button class="button">Request Invite</button>
+      </div>
+    </section>
+    <section class="why">
+      <div class="wrapper">
+        <h2 class="title title__h2">Why choose EasyBank</h2>
+        <p class="copy">
+          We leverage Open Banking to turn your bank account into flow ñemi ñemi hub. Control your finances like never before.
+        </p>
+        <div class="why__grid">
+          <!-- Grid items -->
+          <div class="why__item">
+            <img src="static/images/icon-online.svg" alt="imagen">
+            <h2 class="title title__h2">Online Banking</h2>
+            <p class="copy">
+              See exactly where your money goes each month. Receive notifications when you´re close que mamañema tu.
+            </p>
+          </div>
+          <div class="why__item">
+            <img src="static/images/icon-budgeting.svg" alt="imagen">
+            <h2 class="title title__h2">Simple Budgeting</h2>
+            <p class="copy">
+              Our modern web and mobile applications allow you to keep track of your finances wherever you are in the world.
+            </p>
+          </div>
+          <div class="why__item">
+            <img src="static/images/icon-onboarding.svg" alt="imagen">
+            <h2 class="title title__h2">Fast Onboarding</h2>
+            <p class="copy">
+              We don´t do branches. Open your account in minutes online and start taking control of your finances right away
+            </p>
+          </div>
+          <div class="why__item">
+            <img src="static/images/icon-api.svg" alt="imagen">
+            <h2 class="title title__h2">Open Api</h2>
+            <p class="copy">
+              Manage your savings, investments, pension and much more from one account. Tracking your money has never been easier.
+            </p>
+          </div>
+          <!-- Grid items end -->
+        </div>
+      </div>
+    </section>
+    <section class="latestArticles">
+      <div class="wrapper">
+        <h2 class="title title__h1">Latest Article</h2>
+        <div class="latestArticles__grid">
+            <!-- Articles items-->
+          <article class="latestArticles__item">
+            <img height="200" src="static/images/image-currency.jpg" alt="imagen">
+            <div class="latestArticles__item__content">
+              <small>
+                By Benchamin
+              </small>
+              <h3 class="title title__h3">
+                Receive money in any currency with no fees
+              </h3>
+              <p class="copy">
+                The world is getting smaller and we’re becoming more mobile. So why should you be forced to only receive money in a single …
+              </p>
+            </div>
+          </article>
+          <article class="latestArticles__item">
+            <img height="200" src="static/images/image-restaurant.jpg" alt="imagen">
+            <div class="latestArticles__item__content">
+              <small>
+                By edual
+              </small>
+              <h3 class="title title__h3">
+                Treat yourself without worrying about money
+              </h3>
+              <p class="copy">
+                TOur simple budgeting feature allows you to separate out your spending and set realistic limits each month. That means you …
+              </p>
+            </div>            
+          </article>
+          <article class="latestArticles__item">
+            <img height="200" src="static/images/image-plane.jpg" alt="imagen">
+            <div class="latestArticles__item__content">
+              <small>
+                By Wilson 
+              </small>
+              <h3 class="title title__h3">
+                Take your Easybank card wherever you go
+              </h3>
+              <p class="copy">
+                We want you to enjoy your travels. This is why we don’t charge any fees on purchases while you’re abroad. We’ll even show you …
+              </p>
+            </div>    
+          </article>
+          <article class="latestArticles__item">
+            <img height="200" src="static/images/image-confetti.jpg" alt="imagen">
+            <div class="latestArticles__item__content">
+              <small>
+                By El varon
+              </small>
+              <h3 class="title title__h3">
+                Receive money in any currency with no fees
+              </h3>
+              <p class="copy">
+                After a lot of hard work by the whole team, we’re excited to launch our closed beta. It’s easy to request an invite through the site ...
+              </p>
+            </div>        
+          </article>
+          <!-- Articles items end -->
+        </div>
+      </div>
+    </section>
+    <footer class="footer">
+      <div class="wrapper">
+        <img src="static/images/logoWhite.svg" alt="logo">
+        <div class="footer__social">
+          <a href="#" class="icon icon__facebook"></a>
+          <a href="#" class="icon icon__youtube"></a>
+          <a href="#" class="icon icon__twitter"></a>
+          <a href="#" class="icon icon__pinterest"></a>
+          <a href="#" class="icon icon__instagram"></a>
+        </div>
+        <div class="footer__contact">
+          <a href="#">About Us</a>
+          <a href="#">Contact</a>
+          <a href="#">Blog</a>
+          <a href="#">Careers</a>
+          <a href="#">Support</a>
+          <a href="#">Privacy Policy</a>
+        </div>
+        <div><button class="button">Request Invite</button></div>
+        <p class="footer__copyright">© Easybank. All Rights Reserved</p>
+      </div>
+    </footer>
 </body>
 </html>
