--- a/index.html
+++ b/index.html
@@ -14,22 +14,25 @@
       <div class="wrapper">
         <div class="header__content">
           <img class="header__logo" src="static/images/logo.svg" alt="logo">
+          <input type="checkbox" id="menu" class="menu__checkbox">
           <ul class="menu">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Contact</a></li>
-            <li><a href="#">Blog</a></li>
-            <li><a href="#">Careers</a></li>
+            <li class="menu__item"><a href="#">Home</a></li>
+            <li class="menu__item"><a href="#">About</a></li>
+            <li class="menu__item"><a href="#">Contact</a></li>
+            <li class="menu__item"><a href="#">Blog</a></li>
+            <li class="menu__item"><a href="#">Careers</a></li>
           </ul>
         <button class="button">Request Invite</button>
-        <nav class="menu__button"></nav>
+        <label for="menu" class="menu__button"></label>
         </div>   
       </div>
     </header>
     <section class="hero">
       <div class="wrapper">
         <div class="hero__content">
-          <div class="hero__img"></div>
+          <div class="hero__img">
+            <img class="hero__imgSrc" src="static/images/image-mockups.png" alt="image">
+          </div>
           <div class="hero__description">
             <h2 class="title title__h1 ">Next generation digital banking</h2>
             <p class="copy">Take your finalcial life online. Your Easybank account will be a one-stop-shop for spending. saving, budgeting, investing, and much more.</p>
