--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@300;400&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="static/css/estilos.css">
-  <title>EasyBankÑemiÑemi</title>
+  <title>EasyBank-RonPB3</title>
 </head>
 <body>
     <header class="header">
