--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <div class="wrapper">
         <h2 class="title title__h2">Why choose EasyBank</h2>
         <p class="copy">
-          We leverage Open Banking to turn your bank account into flow ñemi ñemi hub. Control your finances like never before.
+          We leverage Open Banking to turn your bank account into flow paradise gan hub. Control your finances like never before.
         </p>
         <div class="why__grid">
           <!-- Grid items -->
@@ -53,7 +53,7 @@
             <img src="static/images/icon-online.svg" alt="imagen">
             <h2 class="title title__h2">Online Banking</h2>
             <p class="copy">
-              See exactly where your money goes each month. Receive notifications when you´re close que mamañema tu.
+              See exactly where your money goes each month. Receive notifications when you´re close que duro eres tu.
             </p>
           </div>
           <div class="why__item">
